update login, wishlist

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.10.2",
     "bootstrap": "^5.3.2",
     "emailjs-com": "^3.2.0",
     "formik": "^2.4.5",
@@ -19,7 +20,9 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "replace": "^1.2.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^10.3.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.69.4"
   }
 }
